force-app/main/default/objects/sfcma__PaymentIntent__c/sfcma__PaymentIntent__c.object-meta.xml
<CustomObject>
    <description>Contains information about a customer payment intent in stripe. For example, charge associated (if any), invoice generated (if any) and whether it was successful, cancelled or is incomplete.</description>
    <label>Checkout Payment Intent</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Checkout Payment Intent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Payment Intents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>