force-app/main/default/objects/sfcma__PaymentIntent__c/fields/sfcma__Payment_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Payment_Error_Code__c</fullName>
    <description>Short string indicating the stripe error code reported on last payment error if any encountered on payment intent confirmation.</description>
    <label>Payment Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>