force-app/main/default/objects/sfcma__PaymentIntent__c/fields/sfcma__PaymentErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>sfcma__PaymentErrorMessage__c</fullName>
    <description>Text description for the last payment error.</description>
    <label>Payment Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>