force-app/main/default/objects/sfcma__PaymentIntent__c/fields/sfcma__PaymentErrorType__c.field-meta.xml
<CustomField>
    <fullName>sfcma__PaymentErrorType__c</fullName>
    <description>Type of error returned on last payment error if any is encountered on payment intent confirmation.</description>
    <label>Payment Error Type</label>
    <length>35</length>
    <type>Text</type>
</CustomField>