force-app/main/default/objects/sfcma__PaymentIntent__c/fields/sfcma__Status__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Succeeded</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>