force-app/main/default/objects/sfcma__PaymentIntent__c/fields/sfcma__StripePaymentIntentId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripePaymentIntentId__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Payment Intent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>