force-app/main/default/objects/sfcma__PaymentIntent__c/fields/sfcma__StripePaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripePaymentMethod__c</fullName>
    <label>Stripe Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>